feat: se agrega descripcion de segundo meetup

--- a/20190425_1erMeetup.md
+++ b/20190425_1erMeetup.md
@@ -3,6 +3,7 @@
 * **Fecha**: 25 Abril 2019
 * **Lugar**: Globant Chile - Cerro El Plomo 5630
 * **Fotos**: [Link](https://www.meetup.com/Angular-Chile/photos/29929832/)
+* **Asistentes**: 45 participantes
 
 ## Speakers
 
