feat: se agregan slides de jean machuca

--- a/20190830_3erMeetup.md
+++ b/20190830_3erMeetup.md
@@ -11,7 +11,7 @@
 * **Jean Machuca**  
 *Founder @ QuickCorp – QCObjects*  
 Progressive web apps con QCObjects:
-Slides: TBA
+Slides: [Link](https://www.slideshare.net/jeanmachuca/progressive-web-apps-with-qcobjects-angularjs-chile-community-talk)
 
 * **Ignacio Falk**  
 *Software Engineer @ This Dot*  
